# gemini-ocr-batch

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
design_docs/: 00_index.md  01_architecture.md  02_data_and_state.md  03_orchestration_logic.md  04_domain_integration.md  05_operations.md  06_configuration.md  07_testing.md  08_build_plan.md  agents.md  overview.md
prompts/page_ocr/: README.md  v1.1.jinja  v1.jinja
scripts/: README.md  __init__.py  analyze_failures.py  clear_failure_counts.py  nuke_database.py
src/: __init__.py  __main__.py  batch_api.py  batch_builder.py  cli.py  config.py  database.py  enums.py  env.py  file_api.py  flow.py  gemini_client.py  models.py  prefect_state.py  prompting.py  results.py  scanner.py  tracking.py
src/poc/: batch_with_file_api.py
test/unit/: test_batch_builder.py  test_config.py  test_file_api.py  test_prefect_state.py  test_results.py  test_scanner.py
