[project]
name = "gemini-ocr-batch"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.55.0",
    "jinja2>=3.1.6",
    "pre-commit>=4.5.0",
    "prefect>=3.6.6",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
]
